# nose_pose_detection

./: .gitignore  CMakeLists.txt  README.md  nose_pose.cpp
include/: noseDetect.h  rs2pcd.h
src/facemesh/: CMakeLists.txt
src/noseDetec/: CMakeLists.txt  noseDetect.cpp
src/rs2pcd/: CMakeLists.txt  rs2pcd.cpp
